Closed
Bug 238409
Opened 22 years ago
Closed 22 years ago
Regression in attributes parsing (cellpadding)
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jwkbugzilla, Assigned: jwkbugzilla)
Details
(Keywords: regression)
Attachments
(3 files)
|
406 bytes,
text/html
|
Details | |
|
1.74 KB,
patch
|
sicking
:
review+
jst
:
superreview+
asa
:
approval1.7+
|
Details | Diff | Splinter Review |
|
1.50 KB,
text/html
|
jst
:
review+
|
Details |
Build 20040311 parses <table cellpadding> as <table cellpadding="0">, the
previous behavior was to ignore the attribute (which resulted in something like
<table cellpadding="2">). This seems to be a regression from 232706, the patch
was checked in on Mar 3 18:06.
| Assignee | ||
Updated•22 years ago
|
Assignee: general → bugmail
| Assignee | ||
Comment 1•22 years ago
|
||
I meant cellspacing, not cellpadding in my report (cellpadding has the same
parsing problem but it is 0 by default).
| Assignee | ||
Comment 2•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #144669 -
Flags: review?(bugmail)
Attachment #144669 -
Flags: review?(bugmail) → review+
| Assignee | ||
Updated•22 years ago
|
Attachment #144669 -
Flags: superreview?(jst)
Updated•22 years ago
|
Flags: blocking1.7?
Comment 3•22 years ago
|
||
Comment on attachment 144669 [details] [diff] [review]
Proposed patch
sr=jst, and requesting 1.7 approval for this regression.
Attachment #144669 -
Flags: superreview?(jst)
Attachment #144669 -
Flags: superreview+
Attachment #144669 -
Flags: approval1.7?
This is a pretty bad regression. For many attributes we now treat an invalid
value as '0' whereas we used to ignore the attribute entierly. This affects both
how we render the element and the DOM.
The fix is very simple and should be very safe.
Comment 5•22 years ago
|
||
Comment on attachment 144669 [details] [diff] [review]
Proposed patch
a=asa (on behalf of drivers) for checkin to 1.7
Attachment #144669 -
Flags: approval1.7? → approval1.7+
Comment 6•22 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•22 years ago
|
Flags: blocking1.7?
| Assignee | ||
Comment 7•19 years ago
|
||
Attachment #246975 -
Flags: review?(jst)
Updated•19 years ago
|
Attachment #246975 -
Flags: review?(jst) → review+
Comment 8•19 years ago
|
||
Checking in test_bug238409.html;
/cvsroot/mozilla/testing/mochitest/tests/test_bug238409.html,v <-- test_bug238409.html
initial revision: 1.1
done
Flags: in-testsuite+
| Assignee | ||
Updated•19 years ago
|
Assignee: jonas → trev
You need to log in
before you can comment on or make changes to this bug.
Description
•