Checking in for trev@gtchat.de. Fixing bug 238409. Regression in attribute parsing. r=bugmail@sicking.cc, sr=jst@mozilla.org, a=asa@mozilla.org